@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,6 +24,7 @@ import org.springframework.messaging.handler.annotation.Payload;
 /**
  * @author Amol Nayak
  * @author Artem Bilan
+ *
  * @since 2.2
  */
 public interface StudentService {
@@ -33,7 +34,10 @@ public interface StudentService {
 	StudentDomain getStudentWithException(Long id);
 
 	StudentDomain getStudent(Long id);
+
 	StudentDomain deleteStudent(StudentDomain student);
+
+	List<StudentDomain> deleteStudents(List<StudentDomain> students);
 
 	@Payload("new java.util.Date()")
 	List<StudentDomain> getAllStudents();
